# smart-light-cli

./: .gitignore  Cargo.toml  README.md
src/: cli.yaml  common.rs  config_parse.rs  hue.rs  main.rs  nanoleaf.rs  scenes.rs
src/hue/: calls.rs  light.rs
src/nanoleaf/: calls.rs  light.rs
