[package]
name = "nanoleaf-cli"
version = "0.1.0"
authors = ["Carl Jones <c.m.jones001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rust-ini = "0.16"
