[package]
name = "smart-light-cli"
version = "0.1.0"
authors = ["Carl Jones <c.m.jones001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features=false}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rust-ini = "0.16"
clap = {version = "2.33", features = ["yaml"]}
xdg = "2.2"
palette = "0.5.0"
num-traits = "0.2.14"

[dev-dependencies]
test-case = "1.1.0"
assert-json-diff = "2.0.0"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
